# flights-co2-tracker

./: .gitignore  README.md  dockerfile  dump.rdb
.github/workflows/: backend-deployment.yaml  python-linting-testing.yaml  typescript-linting-formatting.yaml
client/: README.md  package-lock.json  package.json  tailwind.config.ts
client/app/: root.tsx  tailwind.css
client/app/components/: Accordion.tsx  AirspaceCard.tsx  AirspaceDropdownButton.tsx  Berlin.tsx  CelebAvatar.tsx  ChartCard.tsx  FAQ.tsx  Footer.tsx  Header.tsx  Leaderboard.tsx  LeaderboardCard.tsx  LeaderboardRow.tsx  LeaderboardSmallCard.tsx  LoadingSpinner.tsx
client/app/routes/: _app.faq.tsx  _app.stats.$city.tsx  _app.stats.tsx  _app.tsx  _index.tsx
client/app/utils/: airspace_charting.ts  (+1 more)
server/: .gitignore  Dockerfile.api  Dockerfile.main  README.md  calculate_co2.py  carbon_computation.py  celeb_data_computation.py  cloudbuild.yaml  database.py  docker-compose.yml  flight_fuel_consumption_api.py  main.py  opensky_network.py  pyproject.toml  requirements.txt  server_api.py  start.sh
server/api/: server_api.py
server/dockerfiles/: Dockerfile.api  Dockerfile.main
server/kubernetes-manifests/: api-deployment.yaml  api-service.yaml  main-deployment.yaml  redis-deployment.yaml
server/lib/: opensky_network.py
server/src/: carbon_computation.py  database.py  flight_fuel_consumption_api.py  main.py  opensky_network.py  requirements.txt
server/src/api/: server_api.py
server/src/tests/: test_carbon_computation.py  test_main.py
server/tests/: test_carbon_computation.py  test_main.py
